@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2022, University of Oslo
+ * Copyright (c) 2004-2023, University of Oslo
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -29,17 +29,19 @@ package org.hisp.dhis.webapi.controller.dimension;
 
 import static com.google.common.collect.Lists.newArrayList;
 import static java.lang.String.format;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.hisp.dhis.common.CodeGenerator.isValidUid;
 
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.google.common.collect.Lists;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import javax.annotation.Nonnull;
+import javax.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.analytics.dimension.AnalyticsDimensionService;
 import org.hisp.dhis.common.DataQueryRequest;
 import org.hisp.dhis.common.DimensionService;
@@ -50,10 +52,11 @@ import org.hisp.dhis.common.OpenApi;
 import org.hisp.dhis.commons.jackson.domain.JsonRoot;
 import org.hisp.dhis.dataset.DataSet;
 import org.hisp.dhis.dxf2.common.OrderParams;
+import org.hisp.dhis.feedback.ForbiddenException;
 import org.hisp.dhis.feedback.NotFoundException;
-import org.hisp.dhis.fieldfilter.Defaults;
 import org.hisp.dhis.fieldfilter.FieldFilterParams;
 import org.hisp.dhis.fieldfiltering.FieldPath;
+import org.hisp.dhis.hibernate.InternalHibernateGenericStore;
 import org.hisp.dhis.node.AbstractNode;
 import org.hisp.dhis.node.Node;
 import org.hisp.dhis.node.NodeUtils;
@@ -63,10 +66,15 @@ import org.hisp.dhis.node.types.RootNode;
 import org.hisp.dhis.query.Order;
 import org.hisp.dhis.query.Query;
 import org.hisp.dhis.query.QueryParserException;
+import org.hisp.dhis.user.CurrentUser;
+import org.hisp.dhis.user.User;
 import org.hisp.dhis.webapi.controller.AbstractCrudController;
+import org.hisp.dhis.webapi.utils.PaginationUtils;
+import org.hisp.dhis.webapi.utils.PaginationUtils.PagedEntities;
+import org.hisp.dhis.webapi.webdomain.StreamingJsonRoot;
 import org.hisp.dhis.webapi.webdomain.WebMetadata;
 import org.hisp.dhis.webapi.webdomain.WebOptions;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.hisp.dhis.webapi.webdomain.WebRequestData;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -81,6 +89,7 @@ import org.springframework.web.bind.annotation.ResponseBody;
 @OpenApi.Tags("metadata")
 @Controller
 @RequestMapping(value = DimensionController.RESOURCE_PATH)
+@RequiredArgsConstructor
 public class DimensionController extends AbstractCrudController<DimensionalObject> {
   public static final String RESOURCE_PATH = "/dimensions";
 
@@ -88,38 +97,17 @@ public class DimensionController extends AbstractCrudController<DimensionalObjec
   // Dependencies
   // -------------------------------------------------------------------------
 
-  @Autowired private DimensionService dimensionService;
+  private final DimensionService dimensionService;
 
-  @Autowired private AnalyticsDimensionService analyticsDimensionService;
+  private final AnalyticsDimensionService analyticsDimensionService;
 
-  @Autowired private IdentifiableObjectManager identifiableObjectManager;
+  private final IdentifiableObjectManager identifiableObjectManager;
 
-  @Autowired private DimensionItemPageHandler dimensionItemPageHandler;
+  private final DimensionItemPageHandler dimensionItemPageHandler;
 
   // -------------------------------------------------------------------------
   // Controller
   // -------------------------------------------------------------------------
-
-  @Override
-  @SuppressWarnings("unchecked")
-  protected @ResponseBody List<DimensionalObject> getEntityList(
-      WebMetadata metadata, WebOptions options, List<String> filters, List<Order> orders)
-      throws QueryParserException {
-    List<DimensionalObject> dimensionalObjects;
-    Query query =
-        queryService.getQueryFromUrl(
-            DimensionalObject.class,
-            filters,
-            orders,
-            getPaginationData(options),
-            options.getRootJunction());
-    query.setDefaultOrder();
-    query.setDefaults(Defaults.valueOf(options.get("defaults", DEFAULTS)));
-    query.setObjects(dimensionService.getAllDimensions());
-    dimensionalObjects = (List<DimensionalObject>) queryService.query(query);
-
-    return dimensionalObjects;
-  }
 
   @Nonnull
   @Override
@@ -128,6 +116,51 @@ public class DimensionController extends AbstractCrudController<DimensionalObjec
       return dimensionService.getDimensionalObjectCopy(uid, true);
     }
     throw new NotFoundException(format("No dimensional object with id `%s` exists", uid));
+  }
+
+  /**
+   * This method is overridden as {@link DimensionalObject} requires different retrieval and paging
+   * considerations compared to the base generic method. There are many different types of {@link
+   * DimensionalObject} and there is no specific {@link InternalHibernateGenericStore} to retrieve
+   * them from.
+   *
+   * @param rpParameters request parameters
+   * @param orderParams order parameters
+   * @param response response
+   * @param currentUser current user
+   * @return response with Collection of {@link DimensionalObject}
+   */
+  @Override
+  @GetMapping
+  public @ResponseBody ResponseEntity<StreamingJsonRoot<DimensionalObject>> getObjectList(
+      @RequestParam Map<String, String> rpParameters,
+      OrderParams orderParams,
+      HttpServletResponse response,
+      @CurrentUser User currentUser) {
+
+    WebRequestData requestData = applyRequestSetup(rpParameters, orderParams);
+
+    WebMetadata metadata = new WebMetadata();
+    List<DimensionalObject> entities = dimensionService.getAllDimensions();
+
+    Query filteredQuery =
+        queryService.getQueryFromUrl(
+            DimensionalObject.class, requestData.filters(), requestData.orders());
+    filteredQuery.setObjects(entities);
+
+    List<DimensionalObject> filteredEntities =
+        (List<DimensionalObject>) queryService.query(filteredQuery);
+
+    PagedEntities<DimensionalObject> pagedEntities =
+        PaginationUtils.addPagingIfEnabled(metadata, requestData.options(), filteredEntities);
+    linkService.generatePagerLinks(pagedEntities.pager(), RESOURCE_PATH);
+
+    return ResponseEntity.ok(
+        new StreamingJsonRoot<>(
+            pagedEntities.pager(),
+            getSchema().getCollectionName(),
+            org.hisp.dhis.fieldfiltering.FieldFilterParams.of(
+                pagedEntities.entities(), requestData.fields())));
   }
 
   @SuppressWarnings("unchecked")
@@ -219,7 +252,7 @@ public class DimensionController extends AbstractCrudController<DimensionalObjec
   @GetMapping("/dataSet/{uid}")
   public ResponseEntity<JsonRoot> getDimensionsForDataSet(
       @PathVariable String uid,
-      @RequestParam(value = "links", defaultValue = "true", required = false) Boolean links,
+      @RequestParam(value = "links", defaultValue = "true", required = false) boolean links,
       @RequestParam(defaultValue = "*") List<FieldPath> fields)
       throws NotFoundException {
     WebMetadata metadata = new WebMetadata();
@@ -232,9 +265,7 @@ public class DimensionController extends AbstractCrudController<DimensionalObjec
 
     List<DimensionalObject> dimensions = new ArrayList<>();
     dimensions.addAll(
-        dataSet.getCategoryCombo().getCategories().stream()
-            .filter(ca -> !ca.isDefault())
-            .collect(toList()));
+        dataSet.getCategoryCombo().getCategories().stream().filter(ca -> !ca.isDefault()).toList());
     dimensions.addAll(dataSet.getCategoryOptionGroupSets());
 
     dimensions = dimensionService.getCanReadObjects(dimensions);
@@ -253,5 +284,32 @@ public class DimensionController extends AbstractCrudController<DimensionalObjec
         fieldFilterService.toObjectNodes(metadata.getDimensions(), fields);
 
     return ResponseEntity.ok(new JsonRoot("dimensions", objectNodes));
+  }
+
+  /**
+   * This method performs some generic steps. It can be moved into the {@link
+   * org.hisp.dhis.webapi.controller.AbstractFullReadOnlyController} so other Controllers can use it
+   * to avoid duplication.
+   *
+   * @param rpParameters request parameters
+   * @return {@link WebRequestData} record purely for data packaging purposes, containing {@link
+   *     WebOptions}, {@link List} of fields and {@link List} of filters
+   * @throws ForbiddenException if no permission
+   */
+  protected WebRequestData applyRequestSetup(
+      Map<String, String> rpParameters, OrderParams orderParams) {
+
+    List<String> fields = Lists.newArrayList(contextService.getParameterValues("fields"));
+    List<String> filters = Lists.newArrayList(contextService.getParameterValues("filter"));
+    List<Order> orders = orderParams.getOrders(getSchema(DimensionalObject.class));
+
+    if (fields.isEmpty()) {
+      fields.addAll(Preset.defaultPreset().getFields());
+    }
+
+    WebOptions options = new WebOptions(rpParameters);
+    forceFiltering(options, filters);
+
+    return new WebRequestData(options, fields, filters, orders);
   }
 }
